2005-01-02  Per Bothner  <per@bothner.com>

	* AbstractSequence.java, Convert.java, EofClass.java, F32Vector.java,
	F64Vector.java, FString.java, FVector.java, LList.java, Pair.java,
	S16Vector.java, S32Vector.java, S64Vector.java, S8Vector.java,
	SeqPosition.java, Sequence.java, SimpleVector.java, TreeList.java,
	U16Vector.java, U32Vector.java, U64Vector.java, U8Vector.java:
	Change "select" (preprocessor) syntax.

2004-11-06  Per Bothner  <per@bothner.com>

	* LList.java (compareTo):  Move comment, so it doesn't get
	removed by select-java1.
	* TreeList.java:  If JAVA5 is selected, implement Appendable.

2004-08-31  Per Bothner  <per@bothner.com>

	* AbstractSequence.java (getIterator(int)): New overloaded method.
	(getIterator(), listIterator): Define in terms of new method.
	* LList.java (getIterator(int)): New method replaces getIterator().

	* ExtPosition.java (finalize): Rename to release.
	Just use the inherited finalize.
	* TreePosition.java (clear): Rename to release.
	(set): Change to use clear.
	(finalize): Remove as being redundant.

	* LListPosition.java (set): Clear xpos if we're not setting it.
	(set):  New overloaded method, to override inherited method.
	(gotoPrevious):  Add cast to pick specific method.

	* LListPosition.java (hasPrevious): New method.

	* LListPosition.java (getNextPair): Take cdr of result.

	* LListPosition.java (getNextPair): Take cdr of result.

	* PositionManager.java (getPositionObject, register, release):
	Add synchronization.

	* SeqPosition.java (previous): Use getPrevious method.

2004-08-04  Christian Surlykke <christian@surlykke.dk>

	* GapVector.java: (GapVector) Initialization of gapStart and gapEnd.

2004-08-19  Per Bothner  <per@bothner.com>

	* GapVector.java (gapReserve):  Use setSize to change base.size,
	rather than setBufferLength, which doesn't update size.
	(size, hasNext, fill, gapReserve, nextIndex):  Use base.size
	rather than getBufferLength for performance and consistency.
