@@ -1,3 +1,9 @@
+2005-01-07  Per Bothner  <per@bothner.com>
+
+	* LList.java: Partially de-tabify.
+	* SimpleVector.java: Likewise.
+	* SubSequence.java (get): Check index in range.
+
 2005-01-02  Per Bothner  <per@bothner.com>
 
 	* AbstractSequence.java, Convert.java, EofClass.java, F32Vector.java,
